--- a/os/ubuntu/bionic/Dockerfile
+++ b/os/ubuntu/bionic/Dockerfile
@@ -5,4 +5,4 @@ COPY sources.list /etc/apt/
 RUN apt-get update && apt-get install -y tzdata \
     && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /var/lib/apt/lists/*
